// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vignette renders correctly with broken vignette image 1`] = `
<img
  alt=""
  className=""
  src="https://vignette.wikia.nocookie.net/path/to/image.jpeg"
/>
`;

exports[`Vignette renders correctly with default values 1`] = `
<img
  alt=""
  className=""
  src="https://vignette.wikia.nocookie.net/541b323b-a3c2-4d4f-be1f-500cf13573b8"
/>
`;

exports[`Vignette renders correctly with non-vignette image 1`] = `
<img
  alt=""
  className=""
  src="https://example.com/vimage.jpeg"
/>
`;
